OLMIS-2476: Added displayParent to support select2 in a modal

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -95,7 +95,7 @@
 }
 
 .select2-container .select2-dropdown {
-
+    display: block;
     border: $border-color 1px solid;
     border-radius: $border-radius;
     background-color: $background-color;
