OLMIS-2476: Added disabled hover state
- Made select2 arrow show when disabled
- Made select2 popover z-index a reasonable value

--- a/src/openlmis-form/form-controls.scss
+++ b/src/openlmis-form/form-controls.scss
@@ -44,6 +44,7 @@ $form-control-text-color-disabled: $text-color-disabled !default;
 	  box-shadow: 0 0 0 $border-color;
 	  color: $form-control-text-color-disabled;
 	  background-color: transparent;
+	  cursor: not-allowed;
 	}
 	&.is-invalid {
 		box-shadow: inset 0 0 0.5em $brand-danger;
