--- a/src/openlmis-modal/alert.scss
+++ b/src/openlmis-modal/alert.scss
@@ -5,6 +5,11 @@
 		flex-direction: row;
 		align-items: center;
 		font-size: 1.7em;
+
+		&:before {
+			font-size: 2.6em;
+			margin: 0.2em;
+		}
 	}
 
 	.alert-message {
@@ -15,25 +20,22 @@
 		}
 	}
 
-	.icon {
-		font-size: 2.6em;
-		margin: 0.2em;
-
-		&.warning {
-			@include icon('exclamation-triangle');
-			color: $orange;
-		}
-		&.error {
-			@include icon('times-circle-o');
-			color: $brand-danger;
-		}
-		&.sucess {
-			@include icon('check-circle-o');
-			color: $brand-success;
-		}
-	}
-
 	.modal-footer > button {
 		float: right;
 	}
+}
+
+.alert-modal.is-warning .alert-main:before {
+	@include icon('exclamation-triangle');
+	color: $orange;
+}
+
+.alert-modal.is-error .alert-main:before {
+	@include icon('exclamation-triangle');
+	color: $brand-danger;
+}
+
+.alert-modal.is-success .alert-main:before {
+	@include icon('exclamation-triangle');
+	color: $brand-success;
 }
