--- a/src/openlmis-adjustments/adjustments-modal.scss
+++ b/src/openlmis-adjustments/adjustments-modal.scss
@@ -1,47 +1,17 @@
 .adjustments-modal {
-
-    & > form {
-        border-bottom: 1px solid $light-gray;
-        margin-bottom: 1em;
-        padding-bottom: 0.5em;
-    }
-
-    & > dl {
-        align-items: center;
+    dl {
         display: flex;
-        flex-wrap: wrap;
+        margin-top: 1em;
 
-        & > dt,
-        & > dd {
-            margin-bottom: 0.5em;
-            width: 50%;
-
-            &:last-of-type {
-                border-top: 1px solid $light-gray;
-                margin-top: 0.5em;
-                padding-top: 1em;
+        dt {
+            &:after {
+                font-weight: bold;
+                content: ':'
             }
         }
 
-        & > dd {
-            align-items: center;
-            display: flex;
-            flex: 0 1 auto;
-            justify-content: flex-end;
-
-            & > .fa {
-                margin-right: 0.5em;
-            }
-
-            & > input + input {
-                margin-left: 0.5em;
-            }
-
-            & > .form-control {
-                width: initial;
-                display: initial;
-            }
+        dd:not(:last-of-type) {
+            margin-right: auto;
         }
     }
-
 }
