OLMIS-2696: removed border from the bottom of the tabs

--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -65,6 +65,8 @@ body {
             @extend .nav;
             @extend .nav-tabs;
 
+            border-bottom: none;
+
             > li > a {
                 background-color: $background-color-alt;
                 text-decoration: none;
