OLMIS-2797: Tweaked form layout
- made inline forms not wrap
- created .is-primary to move inline form element and buttons to right
- set min width for date input

--- a/src/common/buttons.scss
+++ b/src/common/buttons.scss
@@ -100,6 +100,7 @@ button.close {
         float: left;
     }
 
+    > .is-primary,
     > .button-group.primary,
     > button.primary {
         float: right;
