--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -104,6 +104,7 @@
         padding-top: 0em;
         > input {
             @extend .form-control;
+            width: 100%;
         }
         &.select2-search--hide {
             display:none;
