--- a/src/openlmis-form/select.scss
+++ b/src/openlmis-form/select.scss
@@ -23,22 +23,22 @@ markup:
 	<select id="select-single-option" required>
 	  <option value="selected-default-option">Default option (already selected)</option>
 	</select>
-	<fieldset ng-init="
-		selectValue;
-		secondOption;
-		options = [
-			{
-				name: 'Animals that do not exist',
-				options: ['Unicorn']
-			},
-			{
-				name: 'Variables that do not exist',
-				options: ['foo', 'bar', 'baz']
-			}
-		];
-		">
-		<legend>ngModel based select elements</legend>
-		<a ng-click="selectValue=undefined">Reset</a>
+</form>
+<form class="form-inline" ng-init="
+	selectValue;
+	secondOption;
+	options = [
+		{
+			name: 'Animals that do not exist',
+			options: ['Unicorn']
+		},
+		{
+			name: 'Variables that do not exist',
+			options: ['foo', 'barbarbar bar bar', 'baz']
+		}
+	];
+	">
+	<div class="form-group">
 		<label for="select-ng-options">Select using ngOptions</label>
 		<select id="select-ng-options" required
 			ng-model="selectValue"
@@ -46,6 +46,8 @@ markup:
 		>
 			<option value="">Select a non-existant thing</option>
 		</select>
+	</div>
+		<div class="form-group">
 		<label for="select-updated">Select with dynamic options</label>
 		<select id="select-updated" required
 			placeholder="Pick something"
@@ -53,21 +55,21 @@ markup:
 			ng-options="value for value in selectValue.options"
 			>
 		</select>
-	</fieldset>
-	<fieldset ng-init="
-		shortOptionsList = ['Blue', 'Purple', 'Red', 'Yellow', 'Green', 'Teal'];
-		longOptionsList = ['Silver', 'Slate Blue', 'Blue', 'Lavender', 'Violet', 'Purple', 'Rebecca Purple', 'Plum', 'Maroon', 'Red', 'Peach', 'Yellow', 'Lime', 'Green', 'Seafoam', 'Teal', 'Aquamarine'];
-		searchOptions = shortOptionsList;
-	">
-		<legend>Searching options in the select element</legend>
-		<label for="select-more-than-10">Select if there is more than 10 items</label>
-		<select id="select-more-than-10" ng-model="selectColor" ng-options="color for color in searchOptions">
-		</select>
-		<label class="checkbox">
-			<input type="checkbox" ng-model="listLength" value="long" ng-change="searchOptions = listLength? longOptionsList : shortOptionsList" />
-			List length is long
-		</label>
-	</fieldset>
+	</div>
+	<button ng-click="selectValue=undefined">Reset</button>
+</form>
+<form ng-init="
+	shortOptionsList = ['Blue', 'Purple', 'Red', 'Yellow', 'Green', 'Teal'];
+	longOptionsList = ['Silver', 'Slate Blue', 'Blue', 'Lavender', 'Violet', 'Purple', 'Rebecca Purple', 'Plum', 'Maroon', 'Red', 'Peach', 'Yellow', 'Lime', 'Green', 'Seafoam', 'Teal', 'Aquamarine'];
+	searchOptions = shortOptionsList;
+">
+	<label for="select-more-than-10">Select if there is more than 10 items</label>
+	<select id="select-more-than-10" ng-model="selectColor" ng-options="color for color in searchOptions">
+	</select>
+	<label class="checkbox">
+		<input type="checkbox" ng-model="listLength" value="long" ng-change="searchOptions = listLength? longOptionsList : shortOptionsList" />
+		List length is long
+	</label>
 </form>
 
 
