OLMIS-2836: Used CSS only solution to make select2 use auto width

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -98,6 +98,8 @@
 
     padding: 0.5em 0em;
 
+    width: auto !important;
+
     .select2-search{
         display: block;
         padding: 0.5em;
@@ -149,7 +151,7 @@
             height: 0;
             width: 0;
             position: absolute;
-            left: 50%;
+            left: $font-size * 2;
             pointer-events: none;
             border-width: $font-size;
             margin-left: 0 - $font-size;
