--- a/src/openlmis-file-upload/file-upload.scss
+++ b/src/openlmis-file-upload/file-upload.scss
@@ -19,7 +19,7 @@ Styleguide 3.6
     align-items: flex-end;
 
     input[type=file] {
-        display: none;
+        @extend .sr-only;
     }
 
     button.file {
