--- a/src/openlmis-file-upload/file-upload.scss
+++ b/src/openlmis-file-upload/file-upload.scss
@@ -17,6 +17,7 @@ Styleguide 3.6
 
     display: flex;
     align-items: flex-end;
+    overflow: hidden;
 
     input[type=file] {
         @extend .sr-only;
@@ -28,24 +29,35 @@ Styleguide 3.6
         @include button-icon('file');
     }
 
-    button.clear {
-        @extend button.primary;
-        @include button($button-color-danger);
-        @include button-icon('trash');
-    }
-
     .btn-file,
     input[type=submit].file {
         @extend button.file;
     }
 
-    .btn-clear,
-    input[type=submit].clear {
-        @extend button.clear;
-    }
-
-    button.file,
-    button.clear, {
+    button.file {
         margin-right: 0.5em;
     }
+
+    .clear {
+        position: absolute;
+        right: 0;
+        top: 0;
+        margin: 0.5em 0.5em;
+        cursor: pointer;
+        color: $light-gray;
+        @include icon('remove');
+    }
+
+    p {
+        margin: 0 1em;
+    }
+
+    .file-icon {
+        @include icon('file');
+    }
+}
+
+.openlmis-file-upload.empty {
+    box-shadow: none;
+    border: none;
 }
