OLMIS-2817: changed class name from empty to is-empty

--- a/src/openlmis-file-upload/file-upload.scss
+++ b/src/openlmis-file-upload/file-upload.scss
@@ -57,7 +57,7 @@ Styleguide 3.6
     }
 }
 
-.openlmis-file-upload.empty {
+.openlmis-file-upload.is-empty {
     box-shadow: none;
     border: none;
 }
