OLMIS-2573: Split up popover and made communicate with openlmisInvalid
- Added popover controller to manage display of elements in popovers
- Separated popover text adding/deleting from popover directive
- Made popover listen to popoverCtrl
- Added popover-template
- Added event to openlmis-invalid, that popovers get hooked into

--- a/src/openlmis-table-form/table-forms.scss
+++ b/src/openlmis-table-form/table-forms.scss
@@ -77,6 +77,12 @@ td.is-invalid {
   }
 }
 
+.popover .openlmis-invalid {
+  > * {
+    @extend .input-error;
+  }
+}
+
 td,
 td > div:first-child:last-child,
 th {
