OLMIS-2797: Made error handling for table easily changable
- Added suppression functions to openlmis-invalid controller
- made single input directive suppress messages
- added td.is-invalid styles

OLMIS-2797: Added message suppression into single input directive

OLMIS-2797: Added td.is-invalid styles

OLMIS-2797: Made child messages pass to parents

OLMIS-2797: Added more graceful way to move openlmis-invalid error message

--- a/src/openlmis-table-form/table-forms.scss
+++ b/src/openlmis-table-form/table-forms.scss
@@ -63,6 +63,20 @@ that is not nessicarry.
 Styleguide 4.5
 */
 
+.openlmis-table > tbody > tr > td.is-invalid,
+td.is-invalid {
+  @include icon('exclamation-circle');
+  padding-right: 2em;
+  
+  &::before{
+    color: $brand-danger;
+    position: absolute;
+    top: 50%;
+    right: 0.5em;
+    transform: translateY(-50%);
+  }
+}
+
 td,
 td > div:first-child:last-child,
 th {
