--- a/src/openlmis-table-form/td-has-single-input-control.scss
+++ b/src/openlmis-table-form/td-has-single-input-control.scss
@@ -1,3 +1,8 @@
+td:focus {
+    outline: none;
+    box-shadow: inset 0em 0em 0.5em $brand-primary;
+}
+
 td.has-single-input-control{
     > label {
         display: none;
