--- a/src/common/base.scss
+++ b/src/common/base.scss
@@ -39,6 +39,10 @@ a {
   }
 }
 
+ul {
+  margin-bottom: 0px; // resetting bootstrap value
+}
+
 @keyframes(fade-in) {
   from {
     transform: scale(0);
